bug 50633 patch by riceman+bmo@mail.rit.edu r=jkeiser sr=kin a=asa textarea always does a soft wrap, even with wrap="off" or white-space:nowrap or white-space:pre